--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,1 +1,29 @@
-<h1>Hiii</h1>
+<div class="container mt-5">
+    <div>
+        <%= link_to 'javascript:history.back()' do %> <h4>
+            <i class="fas fa-arrow-left"></i>Back</h4>
+        <% end %>
+        <h3>Group: <%= @group.name %> </h3>
+    </div>
+        
+    <div class="head-low">
+        <p>Total Cost</p>
+        <p class="price">$<%= @group.deals.map(&:total).sum %></p>
+    </div>
+    <div>
+    <% @group.deals.each do |g| %>
+        <%= link_to deal_path(g) do %>
+        <div>
+            <div>
+                <p><%= g.name %></p>
+                <p><%= g.created_at.strftime("%Y-%m-%d") %></p>
+            </div>
+            <p>Price: $<%= g.total %></p>
+        </div>
+        <% end %>
+    <% end %>
+    </div>
+    <div>
+        <%= link_to 'Add Deal', new_group_deal_path(@group), class: 'btn btn-primary'  %>
+    </div>
+</div>
