Style login forms and homepage

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,11 @@
-<div class="container mt-5">
+<div class="mt-5 container">
 
-    <div class="text-center mb-5">
-    <h2 class="text-warning"> <i class="fab fa-ideal text-warning"></i> Grouping Deals</h2>
+    <div class="text-center title">
+    <h1 class="text"> <i class="fab fa-ideal"></i> </h1>
+    <h1>Grouping Deals</h1>
     </div>
 
-    <div class="text-center mt-5 p-4">
+    <div class="text-center btons p-4">
         <%= link_to "Sign In", sign_in_path, class: 'btn  btn-success w-100 mb-5' %>
         <%= link_to "Sign Up", sign_up_path, class: 'btn btn-primary w-100' %>
     </div>
