--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,32 @@
 @import 'bootstrap/dist/css/bootstrap';
 
-.pagy {
-  background-color: #3778C2;
+:root {
+  --main: #3778c2;
+  --second: #5fb523;
+  --text: #434b54;
+}
+
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 2vh;
+}
+
+a,
+a:hover {
+  text-decoration: none;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .user-img {
@@ -13,9 +38,10 @@
 
 .name {
   color: white;
-  font-weight: 900;
+  font-weight: 600;
   text-transform: capitalize;
   margin-bottom: 2rem;
+  font-size: 4rem;
 }
 
 #deal {
@@ -36,4 +62,38 @@
 
 .mene {
   list-style-type: none;
+}
+
+.app {
+  height: 100vh;
+  width: 43vw;
+  background-image: linear-gradient(to top left, var(--main), #08111d);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.btons {
+  margin-top: 21rem !important;
+  width: 70%;
+  margin-left: 8rem !important;
+}
+
+.title {
+  margin-top: 5rem !important;
+}
+
+.signup {
+  margin-left: 6rem;
+}
+
+form {
+  font-size: 1.5rem;
+}
+
+.btn {
+  font-size: 2rem;
+}
+
+.pagy {
+  margin-right: 6rem !important;
 }
