--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,14 @@
-<div class="conatiner mt-5">
-    <div class="text-center mb-5">
-        <h2 class="text-warning"> <i class="fab fa-ideal text-warning"></i> Sign Up</h2>
+<div class="conatiner w-100 mt-5">
+    <div class="text-center title mr-5  mb-5">
+        <h1 class="text"> <i class="fab fa-ideal"></i> </h1>
+        <h1> Sign Up</h1>
     </div>
-    <div class="text-center mt-5 p-4">
+    <div class="signup">
+    <div class="text-center btons mt-5 mr-5 p-4">
     <%= form_with(model: @user, local: true) do |f| %>
       <%= f.text_field :name, placeholder: "Your Name", class: 'w-50' %>
       <%= f.submit "Sign Up", class: 'btn btn-primary w-50 mt-4' %>
     <% end %>
+    </div>
     </div>
 </div>
