--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,9 +1,9 @@
-<div class="container mb-5">
-    <div class="head">
+<div class="container app mb-5">
+    <div class="text-center mb-5 mt-5 text-white h1">
         <%= link_to user_path(current_user) do %>
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-arrow-left"></i>
         <% end %>
-        <h3><%= current_user.name.capitalize %>'s Deals</h3>
+        <h3 class="username"><%= current_user.name.capitalize %>'s Deals</h3>
     </div>
 
     <div>
@@ -12,9 +12,11 @@
         <p class="price">$<%= @deals.sum(:amount) %></p>
         <% end  %>
     </div>
-    <div class="list-items">
+    <div class="">
     </div>
-    <div class="create-group">
-        <%= link_to 'Add Deal', new_deal_path, class: 'btn btn-primary'  %>
+    <div class="creating ">
+        <%= link_to new_deal_path, class: 'btn btn-primary' do %> <h3>
+            <i class="fas fa-plus"></i>Add Deal </h3>
+        <% end %>
     </div>
 </div>
