--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -1,25 +1,25 @@
-<div class="container mt-5 text-center">
-    <div>
+<div class="container mt-5 text-center app text-white">
+    <div class="mb-5">
        <%= link_to 'javascript:history.back()' do %> <h4>
             <i class="fas fa-arrow-left"></i>Back</h4>
         <% end %>
-        <h3>Deal Details</h3>
+        <h3 class="h1 text-white font-weight-bold">Deal Details</h3>
     </div>
-    <div class="list-items">
+    <div class="items mb-5">
         <div class="text-center">
-            <h1>adding an icon</h1> 
+        <h3 class="detail pt-4">Deal Name:</h3>
             <h3 class="ml-3"><%= @deal.title %></h3>
         </div>
-        <div class="mt-5 text-center">
-            <p class="detail pt-5">Price:</p>
+        <div class=" text-center">
+            <p class="detail pt-4">Price:</p>
             <p class="h2">$<%= @deal.amount %>
         </div>
         <div class="text-center">
-            <p class="detail pt-5">Author:</p>
+            <p class="detail pt-4">Author:</p>
             <p class="h2"><%= @deal.author.name.capitalize %></p>
         </div>
         <div class="text-center">
-            <p class="detail pt-5">Created at:</p>
+            <p class="detail pt-4">Created at:</p>
             <p class="h2"><%= @deal.created_at.strftime("%Y-%m-%d") %></p>
         </div>
     </div>
