--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,22 +1,18 @@
-<div class="container text-center mt-5">
+<div class="container text-center app text-white mt-5">
     <div>
         <%= link_to user_path(current_user) do %>
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-arrow-left h4"></i>
         <% end %>
         <br>
-        <br>
-        <h3>All Groups</h3>
-    </div>
-    <div class="head-low">
-        <p>Total Groups</p>
-        <p class="price"><%= @groups.count %></p>
-    </div>
-    <div class="list-items">
-        <%= make_group(@groups) %>
-    </div>
-    <br>
-    <br>
-    <div class="create-group">
+    <h1 class="text-white text-center">All Groups</h1>
+        <% @groups.each do |g| %>
+        <ul class="item">
+        <li>
+    <%= link_to g.name, group_path(g), class: "btn btn-outline-success text-center" %>
+        </li>
+        </ul>
+        <% end %>
+    <div class="creating mt-5">
     <%= link_to 'Create Group', new_group_path, class: 'btn btn-primary'  %>
     </div>
 </div>
