Style Group's show page

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,20 +1,15 @@
-<div class="container mt-5">
+<div class="container mt-5 app text-center text-white">
     <div>
         <%= link_to 'javascript:history.back()' do %> <h4>
             <i class="fas fa-arrow-left"></i>Back</h4>
         <% end %>
-        <h3>Group: <%= @group.name %> </h3>
+        <h1><%= @group.name %> Group </h1>
     </div>
         
     <div>
-        <p>Total Cost</p>
-    </div>
-    <div>
-        <%= link_to deal_path(@group) %>
         <div>
             <div>
-                <p><%= @group.name %></p>
-                <p><%= @group.created_at.strftime("%Y-%m-%d") %></p>
+                <p>Created At: <%= @group.created_at.strftime("%Y-%m-%d") %></p>
             </div>
             <p>Price: $<%= @group.total %></p>
         </div>
